[tool.poetry]
name = "pygame"
version = "0.1.0"
description = ""
authors = ["Arizona3235 <aakashagrawal194@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
